# marl-gpt-interp

./: .gitignore  .gitmodules  AGENTS.md  Justfile  LICENSE  README.md  pyproject.toml
configs/: run_experiment.yaml
configs/analyze_fuji_soccer_samples/: 2026-07-14-local-smoke.yaml
configs/compare_soccer_stats/: example.yaml  template.yaml
configs/cross_env_compute_sharing/: 2026-07-06-jz-small.yaml
configs/cross_football_representation_geometry/: 2026-07-15-local-no-env-mean.yaml  2026-07-15-local-random-frames.yaml  2026-07-15-local-small.yaml
configs/download_stp_tracking_sample/: 2026-07-14-helios-cyrus-smoke.yaml
configs/env_mechanism_probes/: 2026-07-06-jz-directions.yaml  2026-07-06-jz-small.yaml  smoke.yaml
configs/external_soccer_marl_gpt/: 2026-07-15-local-smoke.yaml
configs/grf_rollout_stats/: 2026-06-30-smoke.yaml  2026-06-30-v100-small.yaml
configs/internal_representation_geometry/: 2026-07-06-jz-small.yaml  2026-07-15-local-no-env-mean.yaml
configs/make_cross_domain_representation_figures/: 2026-07-15-no-env-mean.yaml
configs/normalize_soccer_data/: example.yaml  template.yaml
docs/: 2026-06-30-project-brief.md  2026-06-30-roadmap.md  2026-06-30-soccer-analytics-statistics.md  2026-06-30-workshop-abstract.md  2026-07-02-grf-jz-setup.md  README.md  marl-gpt-architecture.html  project-brief.md  roadmap.md  workshop-abstract.md
docs/claims/: 2026-07-06-environment-separated-partial-sharing.md  2026-07-22-recurring-causal-circuits.md  README.md
docs/decisions/: 2026-06-30-stage-work-from-grf-to-human-gap.md  2026-06-30-start-with-grf-rollout-statistics.md  2026-07-15-prioritize-causal-cross-football-concept-transfer.md  2026-07-18-prioritize-functional-feature-accounting.md  2026-07-18-target-tacsim-benchmark.md  2026-07-22-adopt-actor-critic-clts.md  README.md
docs/experiments/: README.md  (+25 more)
latex/: custom.bib  main.tex
notebooks/: README.md  create-kernel.sh  loss.ipynb
scripts/: analyze_fuji_soccer_samples.py  compare_soccer_stats.py  cross_env_compute_sharing.py  cross_football_representation_geometry.py  demo.py  download_stp_tracking_sample.py  env_mechanism_probes.py  external_soccer_marl_gpt.py  grf_rollout_stats.py  internal_representation_geometry.py  make_cross_domain_representation_figures.py  make_environment_separated_partial_sharing_figures.py  normalize_soccer_data.py  run_experiment.py  setup_env_probe_dataset.py
(+177 files in other folders)
