[project]
name = "marl-gpt-interp"
version = "0.1.0"
description = "Research code for marl-gpt-interp."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = ""},
]
requires-python = ">=3.11,<3.14"
dependencies = [
    "hydra-core",
    "ipykernel",
    "loguru",
    "matplotlib>=3.11.0",
    "numpy>=2.2.6",
    "wandb",
]

[dependency-groups]
dev = [
    "pre-commit",
    "pytest",
    "pytest-cov",
    "ruff>=0.15.20",
]
grf = [
    "gfootball @ git+https://github.com/Xmaster6y/football.git@55b84ba",
    "gymnasium>=1.2.0",
    "pyarrow>=20.0.0",
    "pydantic>=2.10",
    "tdhook>=0.1.3",
    "torch>=2.8.0",
]
sae = [
    "dictionary-learning>=0.1.0",
]

[build]
target-dir = "build/dist"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
line-length = 119
target-version = "py311"
